.env file modified

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=http://localhost:3000/books
+VITE_API_URL=/api/books
+# VITE_GOOGLE_BOOKS_API_URL=https://www.googleapis.com/books/v1/volumes
